--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ body, html {
     margin-top: 2%;
 }
 .button-container {
-    text-align: center;
+    text-align: left;
     margin-top: 7%;
+    margin-left: 3%;
 }
 
 .button-container a {
@@ -70,8 +71,8 @@ body, html {
 
 form {
     display: inline-block;
-    padding: 0 40px;
-    padding-bottom: 15px;
+    padding: 0 70px;
+    padding-bottom: 20px;
     /*background: #e1e1e1;*/
     /*border-radius: 4px;*/
     background-image: url("img/form.png");
@@ -81,12 +82,13 @@ form {
 input[type="text"],
 input[type="email"] {
     vertical-align: bottom;
-    height: 23px;
+    height: 33px;
     border: 1px solid #fff;
     border-radius: 3px;
-    width: 200px;
-    margin-top: 15px;
+    width: 250px;
+    margin-top: 20px;
     display: inline-block;
+    font-size: 16px;
 }
 
 input[type="submit"] {
@@ -94,11 +96,11 @@ input[type="submit"] {
     background: #ec008c;
     border: 1px solid #ec008c;
     border-radius: 3px;
-    height: 27px;
-    font-size: 14px;
+    height: 37px;
+    font-size: 18px;
     color: #fff;
-    width: 200px;
-    margin-top: 15px;
+    width: 250px;
+    margin-top: 20px;
     display: inline-block;
 }
 
